add: article crud

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -43,6 +43,9 @@
                         <a href="{{ path('app_forgot_password_request') }}" class="font-medium text-indigo-600 hover:text-indigo-500">
                             Mot de passe oublié ?
                         </a>
+                        <a href="{{ path('app_logout') }}" class="font-medium text-indigo-600 hover:text-indigo-500">
+                            deconexion
+                        </a>
                     </div>
                 </div>
 
