--- a/templates/registration/confirmation_email.html.twig
+++ b/templates/registration/confirmation_email.html.twig
@@ -50,13 +50,13 @@
 <body>
 <div class="email-container">
     <div class="header">
-        <h1>Bienvenue sur WebMinds !</h1>
+        <h1>Bienvenue sur EemiBlog !</h1>
     </div>
 
     <p>Bonjour !</p>
 
     <p>
-        Merci de votre inscription sur WebMinds. Pour finaliser la création de votre compte,
+        Merci de votre inscription sur EemiBlog. Pour finaliser la création de votre compte,
         veuillez confirmer votre adresse email en cliquant sur le bouton ci-dessous :
     </p>
 
@@ -73,7 +73,7 @@
     <div class="footer">
         <p>
             Cordialement,<br>
-            L'équipe WebMinds
+            L'équipe EemiBlog
         </p>
         <p style="font-size: 12px;">
             Si le bouton ne fonctionne pas, copiez et collez ce lien dans votre navigateur :<br>
