--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -12,7 +12,7 @@
                     Mon Profil
                 </a>
                 {% if is_granted('ROLE_ADMIN') %}
-                    <a href=""
+                    <a href="{{ path('app_admin_dashboard') }}"
                        class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                         Administration
                     </a>
