--- a/templates/article/slug.html.twig
+++ b/templates/article/slug.html.twig
@@ -16,7 +16,9 @@
                 <header class="mb-8">
                     {% if article.category %}
                         <a href="{{ path('app_home', {category: article.category.slug}) }}"
-                           class="inline-block bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full text-sm mb-4 hover:bg-indigo-200 transition">
+                           class="inline-block px-3 py-1 rounded-full text-sm mb-4 hover:bg-indigo-200 transition"
+                           style="background-color: {{ article.category.color }};"
+                        >
                             {{ article.category.name }}
                         </a>
                     {% endif %}
