--- a/templates/partials/_header.html.twig
+++ b/templates/partials/_header.html.twig
@@ -17,6 +17,10 @@
                         Administration
                     </a>
                 {% endif %}
+                <a href="{{ path('app_article_new') }}"
+                   class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                    Crée un article
+                </a>
                 <a href="{{ path('app_logout') }}"
                    class="inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
                     Déconnexion
